feat(*): replace URL with URI as DataStore path input parameter