@@ -4,14 +4,14 @@ package org.geotoolkit.pending.demo.datamodel.shapefile;
 import com.vividsolutions.jts.geom.Coordinate;
 import com.vividsolutions.jts.geom.GeometryFactory;
 import com.vividsolutions.jts.geom.Point;
-import java.net.URL;
+
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import org.geotoolkit.data.shapefile.ShapefileFeatureStore;
 import org.geotoolkit.feature.FeatureTypeBuilder;
 import org.geotoolkit.feature.FeatureUtilities;
 import org.geotoolkit.referencing.CRS;
-import org.apache.sis.storage.DataStoreException;
 import org.geotoolkit.feature.Feature;
 import org.geotoolkit.feature.type.FeatureType;
 
@@ -21,7 +21,7 @@ public class CreateShapefileDemo {
     public static void main(String[] args) throws Exception {
         
         //create a featurestore toward the wanted path
-        final ShapefileFeatureStore store = new ShapefileFeatureStore(new URL("file:/tmp/test.shp"));
+        final ShapefileFeatureStore store = new ShapefileFeatureStore(URI.create("file:/tmp/test.shp"));
         
         //create the feature type needed
         final FeatureTypeBuilder ftb = new FeatureTypeBuilder();
