@@ -19,8 +19,8 @@ package org.geotoolkit.wps.converters.inputs.references;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Map;
 import javax.xml.bind.JAXBException;
 import javax.xml.stream.XMLStreamException;
@@ -99,10 +99,8 @@ public final class ReferenceToFeatureCollectionConverter extends AbstractReferen
             }
         } else if (mime.equalsIgnoreCase(WPSMimeType.APP_GEOJSON.val())) {
             try {
-                return WPSConvertersUtils.readFeatureCollectionFromJson(new URL(source.getHref()));
-            } catch (DataStoreException | MalformedURLException ex) {
-                throw new UnconvertibleObjectException(ex);
-            } catch (URISyntaxException | IOException ex) {
+                return WPSConvertersUtils.readFeatureCollectionFromJson(URI.create(source.getHref()));
+            } catch (DataStoreException | URISyntaxException | IOException ex) {
                 throw new UnconvertibleObjectException(ex);
             }
             // SHP
